[gd_scene load_steps=4 format=3 uid="uid://bhisr6kus5mgv"]

[ext_resource type="Texture2D" uid="uid://y8bk3xg2x4ti" path="res://Art/Background.JPG" id="1_q2mg3"]
[ext_resource type="Script" path="res://Scripts/start_button.gd" id="2_5op3t"]
[ext_resource type="Texture2D" uid="uid://b1prxmolqx4ef" path="res://Art/Discord Icon.png" id="3_fe6ud"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1917.0
offset_bottom = 1083.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.037
anchor_right = 0.049
anchor_bottom = 0.102
offset_left = -19.17
offset_top = -40.071
offset_right = 1826.07
offset_bottom = 910.534
texture = ExtResource("1_q2mg3")

[node name="Button" type="Button" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009
anchor_top = 0.036
anchor_right = 0.048
anchor_bottom = 0.102
offset_left = 0.747
offset_top = 0.0119972
offset_right = -0.0159988
offset_bottom = 0.533997
script = ExtResource("2_5op3t")

[node name="DiscordLogo" type="TextureRect" parent="Control/Button"]
layout_mode = 0
offset_left = -24.0
offset_top = -25.0
offset_right = 99.0
offset_bottom = 98.0
texture = ExtResource("3_fe6ud")
expand_mode = 1

[connection signal="button_down" from="Control/Button" to="Control/Button" method="_on_button_down"]
[connection signal="button_up" from="Control/Button" to="Control/Button" method="_on_button_up"]
[connection signal="pressed" from="Control/Button" to="Control/Button" method="_on_pressed"]
